# Fluxion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: README.md  architecture.md  dsl-gaps.md  mvp.md  runtime.md  text-dsl.md
examples/: animations_using_animate.fluxion.json  animations_using_animate.py  basic_concepts_square_to_circle.fluxion.json  basic_concepts_square_to_circle.py  gradient_image_from_array.fluxion.json  gradient_image_from_array.py  plotting_with_manim.fluxion.json  plotting_with_manim.py  simple_circle.fluxion.json  simple_circle.py  simple_circle.vanim.json  special_camera_settings.fluxion.json  special_camera_settings.py
examples/gallery/: animations-using-animate.fluxion.txt  arg-min-example.fluxion.txt  boolean-operations.fluxion.txt  brace_annotation.fluxion.txt  fixed-in-frame-m-object-test.fluxion.txt  gradient-image-from-array.fluxion.txt  graph-area-plot.fluxion.txt  heat-diagram-plot.fluxion.txt  manim_ce_logo.fluxion.txt  moving-angle.fluxion.txt  moving-around.fluxion.txt  moving-dots.fluxion.txt  moving-group-to-destination.fluxion.txt  moving-zoomed-scene-around.fluxion.txt  moving_frame_box.fluxion.txt  opening_manim.fluxion.txt  orbital_dot.fluxion.txt  plotting-sin-cos.fluxion.txt  point-with-trace.fluxion.txt  polygon-on-axes.fluxion.txt  rotation-updater.fluxion.txt  (+10 more)
schemas/: fluxion.schema.json  vanim.schema.json
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_python_dsl.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: easing.ts  (+5 more)
(+107 files in other folders)
