[project]
name = "fluxion"
version = "0.1.0"
description = "Manim-like Python DSL that exports semantic scene graph animation JSON for a web runtime."
requires-python = ">=3.10"
readme = "docs/mvp.md"
license = { file = "LICENSE" }
authors = [{ name = "Yoshihide Shirai" }]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
